# FoodCalc

./: .gitignore  README.md  docker-compose.yaml  init.sql  main.py  pyproject.toml
backend/: .env.prod  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __main__.py  settings.py
backend/app/core/: __init__.py  auth.py  dispatcher_maker.py  security.py  single.py
backend/app/core/auth/: __init__.py  auth_class.py
backend/app/database/: __init__.py  database.py  init_db.py  session.py
backend/app/database/models/: __init__.py  key.py  mineral.py  mineral_type.py  product.py  product_mineral.py  user.py
backend/app/depends/: __init__.py  auth.py  db.py  session.py
backend/app/handlers/: auth.py
backend/app/routers/: decorators.py  misc_models.py
backend/app/services/: __init__.py  authservice.py  blocklist.py  dispatcher.py
backend/data/: products.json  types copy copy.json  types copy.json  types.json
backend/tests/: adt_test_classes.py  conftest.py  misc.py
backend/tests/test_api/: test_auth.py  test_minerals.py  test_products.py
backend/tests/test_core/: test_auth.py  test_security.py
backend/tests/test_db/: test_user.py
backend/tests/tests_api/: old_test_minerals.py  old_test_products.py
core/: README.md  pyproject.toml  requirements.txt
core/core/: __init__.py  core_datetime.py  spec_time.py
core/core/fast_decorators/: __init__.py  cashe_decor.py
core/core/fast_routers/: status_router.py
core/core/redis_client/: __init__.py  base.py
core/core/security/: __init__.py  base.py  exception.py
core/core/simplejwt/: base.py
core/core/sql_repository/: database.py  model.py
core/tests/: __init__.py  conftest.py  test_security.py  test_simple_jwt.py  test_sql_repository.py  test_trash.py
core/tests/adt_classes/: db.py  fast_api_app.py
(+148 files in other folders)
