[project]
name = "core"
version = "0.1.0"
description = "Microservice core packages all in one"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]
